lexer_parser/src/test/exempleFile/miniJaja/success/methNoArgs.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des methodes	*/
/************************/

class methNoArgs{

    void myMeth(){
        int a = 5;
    };

	main {

	}
}