lexer_parser/src/test/exempleFile/miniJaja/fail/methInstrBeforeVar.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des methodes	*/
/************************/

class methInstrBeforeVar{

    int myMeth(int x, boolean y){
        x++;
        y = false; 
        int a = 5;
        x++;
        y = false; 
        int b = 6;
    };

	main {

	}
}